--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "dev:frontend": "cd frontend && npm run dev",
+    "build": "npm run install:frontend && npm run build:frontend",
     "build:frontend": "cd frontend && npm run build",
     "install:frontend": "cd frontend && npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
