--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "npm run install:frontend && npm run build:frontend",
     "build:frontend": "cd frontend && npm run build",
     "install:frontend": "cd frontend && npm install",
+    "postinstall": "npm run install:frontend",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
