--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.6",
+    "nodemailer": "^8.0.0",
     "openai": "^6.17.0"
   },
   "devDependencies": {
